--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -1,6 +1,6 @@
 <div class="splash-container">
   <h1>Welcome to My App</h1>
   <p>Please sign in or log in to continue:</p>
-  <%= link_to "Log In", new_user_session_path, class: "btn btn-primary" %>
+  <%= link_to "Log In", categories_path, class: "btn btn-primary" %>
   <%= link_to "Sign In", new_user_registration_path, class: "btn btn-secondary" %>
 </div>
