--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -4,7 +4,7 @@
 
 <div>
   <%= link_to "Edit this payment", edit_payment_path(@payment) %> |
-  <%= link_to "Back to payments", payments_path %>
+  <%= link_to "Back to transactions", payments_path %>
 
   <%= button_to "Destroy this payment", @payment, method: :delete %>
 </div>
