--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,9 +1,17 @@
-<h1>New category</h1>
-
-<%= render "form", category: @category %>
-
-<br>
-
-<div>
-  <%= link_to "Back to categories", categories_path %>
+<div class="container h-100">
+  <div class="row align-items-center justify-content-center h-100">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header">
+          <h1 class="text-center">New category</h1>
+        </div>
+        <div class="card-body">
+          <%= render "form", category: @category %>
+        </div>
+        <div class="card-footer">
+          <%= link_to "Back to categories", categories_path, class: "btn btn-secondary" %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
