--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -3,5 +3,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to payments", category_payments_path %>
+  <%= link_to "Back to payments", category_payments_path(category_id: @category.id) %>
 </div>
