fixed linter errors

--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -1,1 +1,8 @@
-
+<div class="splash-container d-flex flex-column justify-content-center align-items-center">
+  <h1 class="mb-4">PocketPal App</h1>
+  <p class="mb-4">Please sign in or log in to Get started:</p>
+  <div class="d-flex flex-column flex-sm-row align-items-center">
+    <%= link_to "Log In", categories_path, class: "btn btn-primary mr-sm-3 mb-3 mb-sm-0" %>
+    <%= link_to "Sign In", new_user_registration_path, class: "btn btn-secondary" %>
+  </div>
+</div>
